tests/wal/advanced/expects/axis_minimal.bi.expect
// trace 0
trace {
}
error: [send_data@0] executing step 3 of the transaction: 0f != 14
   ┌─ tests/wal/advanced/axis_minimal.prot:10:5
   │
10 │     D.m_axis_tdata := data;
   │     ^^^^^^^^^^^^^^^^^^^^^^^ [send_data@0] executing step 3 of the transaction: 0f != 14

Error: "Monitor failed"
---CODE---
1
